--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 			<h1 id="title">other worlds</h1>
 			<h2 id="sub_title">brief guide to exoplanets</h2>
 			<a href="{{ url_for('about') }}"><div class="buttons home_buttons">about</div></a>
-			<a href="{{ url_for('exoplanets_display') }}"><div class="buttons home_buttons">main list</div></a>
+			<a href="{{ url_for('exoplanets_display') }}"><div id="main-list" class="buttons home_buttons">main list</div></a>
 		</div>
 	</div>
 </div>
