--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,30 @@
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
 				</li>
+                <li class="nav-item">
+					<a class="nav-link nav_anchors" href="{{ url_for('register') }}">register</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+         {% for message in messages %}
+            <div class="row">
+            <div id="registration-message-container" class="col-12">
+            <div id="registration-message" class="div">
+              {{ message }}
+            </div>
+            </div>
+            </div>
+         {% endfor %}
+      {% endif %}
+    {% endwith %}
+         
+
+
+
     <div id="icons_container" class="col-12 d-none d-sm-block">
 				<i class="fab fa-facebook-square"></i><br>
 				<i class="fab fa-instagram"></i><br>
