--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 					<a class="nav-link nav_anchors" href="{{ url_for('home') }}">Home
 						<span class="sr-only">(current)</span></a>
 				</li>
-                <li class="nav-item">
+				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('about') }}">About</a>
 				</li>
 				<li class="nav-item">
@@ -35,41 +35,43 @@
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link nav_anchors" href="{{ url_for('register') }}">Register</a>
+				</li>
                 <li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('register') }}">register</a>
+					<a class="nav-link nav_anchors" href="{{ url_for('login') }}">Log In</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
 
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-         {% for message in messages %}
-            <div class="row">
-            <div id="registration-message-container" class="col-12">
-            <div id="registration-message" class="div">
-              {{ message }}
-            </div>
-            </div>
-            </div>
-         {% endfor %}
-      {% endif %}
-    {% endwith %}
-         
-
-
-
-    <div id="icons_container" class="col-12 d-none d-sm-block">
-				<i class="fab fa-facebook-square"></i><br>
-				<i class="fab fa-instagram"></i><br>
-				<i class="fab fa-youtube-square"></i><br>
-				<i class="fab fa-twitter-square"></i>
+	{% with messages = get_flashed_messages() %}
+	{% if messages %}
+	{% for message in messages %}
+	<div class="row">
+		<div id="registration-message-container" class="col-12">
+			<div id="registration-message" class="div">
+				{{ message }}
 			</div>
+		</div>
+	</div>
+	{% endfor %}
+	{% endif %}
+	{% endwith %}
+
+	<div id="icons_container" class="col-12 d-none d-sm-block">
+		<i class="fab fa-facebook-square"></i><br>
+		<i class="fab fa-instagram"></i><br>
+		<i class="fab fa-youtube-square"></i><br>
+		<i class="fab fa-twitter-square"></i>
+	</div>
 	{% block content %}
 	{% endblock %}
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+	integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
+</script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
