Added message to log in if already registered

--- a/templates/register.html
+++ b/templates/register.html
@@ -31,5 +31,13 @@
       </form>
     </div>
   </div>
+
+  <div class="row">
+		<div class="col-12">
+			<div class="div">
+				<p>Already Registered? Please <a href="{{ url_for('login') }}">log in</a> now.</p>
+			</div>
+		</div>
+	</div>
 </div>
 {% endblock %}
