--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('about') }}">About</a>
 				</li>
+                <li class="nav-item">
+					<a class="nav-link nav_anchors" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('exoplanets_display') }}">Main List</a>
 				</li>
