--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,9 @@
                 <li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('login') }}">Log In</a>
 				</li>
+                <li class="nav-item">
+					<a class="nav-link nav_anchors" href="{{ url_for('logout') }}">Log Out</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
