--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 					<a class="nav-link nav_anchors" href="{{ url_for('favourite_list') }}">Favourites List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
+					<a class="nav-link nav_anchors" href="{{ url_for('insert_exoplanet') }}">Add Exoplanet</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('register') }}">Register</a>
