Changed the main title to 'My List'

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -38,7 +38,7 @@
 	{% else %}
 	<div class="row">
 		<div class="col-12 exoplanet_page_title_container">
-			<h1 class="top-titles">favourites list</h1>
+			<h1 class="top-titles">My Favourites</h1>
 		</div>
 	</div>
 	<div class="row main-action">
