Deleted 'collection' action button

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -45,7 +45,7 @@
 		</div>
 		<div class="col-3 main_action_buttons">
 			<a
-				href="{{ url_for('favourite_list') }}"><button class="favourites top_buttons buttons">favourites</button></a>
+				href="{{ url_for('favourite_list', username=session['user']) }}"><button class="favourites top_buttons buttons">favourites</button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
