--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<div style="margin-top:5rem" class="container">
+<div class="main"></div>
+<div class="container">
    {% if rocky %}
-    <div class="row">
+    <div class="row margin">
 		<div class="col-12 exoplanet_page_title_container">
 			<h1 class="top-titles title_exoplanet_page">rocky worlds</h1>
 		</div>
@@ -18,7 +19,7 @@
 		</div>
 	</div>
 	{% elif gas %}
-    <div class="row">
+    <div class="row margin">
 		<div class="col-12 exoplanet_page_title_container">
 			<h1 class="top-titles title_exoplanet_page">gas giants</h1>
 		</div>
@@ -34,7 +35,7 @@
 		</div>
 	</div>
 	{% else %}
-    <div class="row">
+    <div class="row margin">
 		<div class="col-12 exoplanet_page_title_container">
 			<h1 class="top-titles title_exoplanet_page">exoplanets</h1>
 		</div>
