Added parameters to be parsed into 'calculate_weight' view to 'calculate' action button

--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<div id="main" class="div"></div>
 <div style="margin-top:4.3rem;" class="container-fluid">
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
