--- a/templates/base.html
+++ b/templates/base.html
@@ -38,16 +38,19 @@
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('insert_exoplanet') }}">Add Exoplanet</a>
 				</li>
+                {% if session.user %}
+                <li class="nav-item">
+					<a class="nav-link nav_anchors" href="{{ url_for('logout') }}">Log Out</a>
+				</li>
+                {% else %}
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('register') }}">Register</a>
 				</li>
                 <li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('login') }}">Log In</a>
 				</li>
-                <li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('logout') }}">Log Out</a>
-				</li>
-			</ul>
+                {% endif %}
+                </ul>
 		</div>
 	</nav>
 
@@ -74,23 +77,6 @@
 	{% block content %}
 	{% endblock %}
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-	integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
-</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script type="text/javascript">
-	$(document).ready(function(){
-            if ($('#home_container').length) {
-                $('#icons_container').hide();
-            };
-            if ($('.exoplanets_holder').length) {
-                $('#empty_message').hide();
-            }
-            if ($('#mass_photo').length) {
-                $('#icons_container').hide();
-            }
-        });
-</script>
+{% include 'layout/scripts.html' %}
 
 </html>
