Gave class of 'margin' to main container

--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="detailed_exoplanet_container" class="container">
+<div id="detailed_exoplanet_container" class="container margin">
 	<div class="row">
 		<div id="detailed_exoplanet_title" class="col-12">
 			<h1 class="top-titles">{{ detailed_exoplanet.planet_name }}</h1>
