Added jquery to add the class of 'smaller-margin' to main containers ('margin') if flash messages are displayed

--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -14,5 +14,8 @@
             if ($('#mass_photo').length) {
                 $('#icons_container').hide();
             }
+            if ($('#registration-message-container').length) {
+                $('.margin').addClass('smaller-margin');
+            }
         });
 </script>
