--- a/static/css/style.css
+++ b/static/css/style.css
@@ -423,6 +423,42 @@ body {
     padding: 1.5rem;
 }
 
+/* login.html starts here */
+
+#login-title {
+    text-transform: capitalize;
+}
+
+#login-container {
+    background-color: rgba(112, 16, 3, .92);
+    width: 50%;
+    padding: 2rem;
+    margin: 0 auto;
+    margin-top: .8rem;
+}
+
+#register-container {
+    width: 44%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 1.5rem;
+    letter-spacing: .1rem;
+    font-size: 85%;
+    background: rgba(54, 10, 125, .8);
+}
+
+#register-container p {
+    padding: .1rem;
+}
+
+#login-button {
+    width: 100%;
+    font-size: 130%;
+    margin-top: .5rem;
+    letter-spacing: .2rem;
+    font-weight: 400;
+}
+
 /* already_favourite messsage page starts here */
 
 #message_container {
