--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container">
-	<div style="margin-top: 5rem;" class="row">
+<div style="margin-top: 10rem;" class="container">
+<div class="row margin">
+<div style="text-align:center;" class="col-12">
+<h1 id="login-title" class="top-titles">Log In</h1>
+</div>
+</div>
+	<div class="row">
 		<div class="col-12">
+          <div id="login-container">
 			<form method="POST" action="{{ url_for('login') }}">
 				<div class="form-group">
 					<label for="exampleInputEmail1">Username</label>
@@ -12,8 +18,6 @@
             pattern="^[a-zA-Z0-9]{5,15}$"
             required
           />
-					<small id="emailHelp" class="form-text text-muted"
-            >We'll never share your email with anyone else.</small>
 				</div>
 				<div class="form-group">
 					<label for="exampleInputPassword1">Password</label>
@@ -26,14 +30,15 @@
             required
           />
         </div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button id="login-button" type="submit" class="btn btn-primary buttons">Log In</button>
 			</form>
+            </div>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col-12">
-			<div class="div">
+			<div id="register-container">
 				<p>Not registered? Please <a href="{{ url_for('register') }}">register</a> now.</p>
 			</div>
 		</div>
