--- a/static/css/style.css
+++ b/static/css/style.css
@@ -425,7 +425,7 @@ body {
 
 /* login.html starts here */
 
-#login-title {
+.login-title {
     text-transform: capitalize;
 }
 
@@ -451,7 +451,7 @@ body {
     padding: .1rem;
 }
 
-#login-button {
+.login-button {
     width: 100%;
     font-size: 130%;
     margin-top: .5rem;
