--- a/templates/login.html
+++ b/templates/login.html
@@ -2,13 +2,21 @@
 <div style="margin-top: 10rem;" class="container">
 <div class="row margin">
 <div style="text-align:center;" class="col-12">
-<h1 id="login-title" class="top-titles">Log In</h1>
+{% if login %}
+<h1 class="top-titles login-title">Log In</h1>
+{% else %}
+<h1 class="top-titles login-title">Register</h1>
+{% endif %}
 </div>
 </div>
 	<div class="row">
 		<div class="col-12">
           <div id="login-container">
+            {% if login %}
 			<form method="POST" action="{{ url_for('login') }}">
+            {% else %}
+            <form method="POST" action="{{ url_for('register') }}">
+            {% endif %}
 				<div class="form-group">
 					<label for="exampleInputEmail1">Username</label>
 					<input
@@ -30,7 +38,11 @@
             required
           />
         </div>
-					<button id="login-button" type="submit" class="btn btn-primary buttons">Log In</button>
+                    {% if login %}
+					<button type="submit" class="btn btn-primary buttons login-button">log in</button>
+                    {% else %}
+                    <button type="submit" class="btn btn-primary buttons login-button">register</button>
+                    {% endif %}
 			</form>
             </div>
 		</div>
@@ -39,7 +51,11 @@
 	<div class="row">
 		<div class="col-12">
 			<div id="register-container">
-				<p>Not registered? Please <a href="{{ url_for('register') }}">register</a> now.</p>
+                {% if login %}
+				<p>Not registered yet? Please <a href="{{ url_for('register') }}">register</a> now.</p>
+                {% else %}
+                <p>If you are already registered, please <a href="{{ url_for('login') }}">login.</a></p>
+                {% endif %}
 			</div>
 		</div>
 	</div>
