--- a/templates/base.html
+++ b/templates/base.html
@@ -37,12 +37,14 @@
 				</li>
 			</ul>
                 {% if session.user %}
+                <ul class="nav navbar-nav navbar-right ml-auto">
                 <li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('profile', username=session['user']) }}">Profile</a>
 				</li>
                 <li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('logout') }}">Log Out</a>
 				</li>
+                </ul>
                 {% else %}
                 <ul class="nav navbar-nav navbar-right ml-auto">
 				<li id="register-nav" class="nav-item">
