Added jquery to reduce margin-top at register/login container when displaying flash messages

--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -16,6 +16,7 @@
             }
             if ($('#registration-message-container').length) {
                 $('.margin').addClass('smaller-margin');
+                $('.register-form').addClass('reduce-margin');
             }
         });
 </script>
