Gave class of 'register-container' to register/login container

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
-<div style="margin-top: 10rem;" class="container">
-<div class="row margin">
+<div class="container">
+<div class="row register-form">
 <div style="text-align:center;" class="col-12">
 {% if login %}
 <h1 class="top-titles login-title">Log In</h1>
