Changed the name to 'register-text' to message underneath the form

--- a/templates/login.html
+++ b/templates/login.html
@@ -50,7 +50,7 @@
 
 	<div class="row">
 		<div class="col-12">
-			<div id="register-container">
+			<div id="register-text">
                 {% if login %}
 				<p>Not registered yet? Please <a href="{{ url_for('register') }}">register</a> now.</p>
                 {% else %}
