--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div id="main" class="div"></div>
-<div style="margin-top:4.3rem;" class="container-fluid">
+<div class="container form-container">
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
 			<h1 class="top-titles">add exoplanet</h1>
@@ -16,42 +16,53 @@
 		</div>
 	</div>
 	<div id="form_row" class="row">
-		<div id="insert_form" class="col-12 col-lg-6">
+		<div id="insert_form" class="col-12">
 			<div id="form_container">
 				<form action="{{ url_for('insert_exoplanet') }}" method="POST">
 					<div class="form-group">
-						<input name="planet_name" type="text" class="form-control input_planet" id="planet_name" placeholder="Exoplanet Name:" required>
+                    <label for="planet_name">Exoplanet Name:</label>
+						<input name="planet_name" type="text" class="form-control input_planet" id="planet_name" required>
   </div>
-						<hr class="separator">
 						<div class="form-group">
-							<input name="discovery_date" type="text" class="form-control input_planet" id="discovery_date" placeholder="Discovery Date:" required>
+                        <label for="dicovery_date">Discovery Date:</label>
+							<input name="discovery_date" type="text" class="form-control input_planet" id="discovery_date" required>
   </div>
-							<hr class="separator">
 							<div class="form-group">
-								<input id="distance_from_earth" name="distance_from_earth" type="text" class="form-control input_planet" id="distance_from_earth" placeholder="Distance From Earth (Light Years):" required>
+                            <label for="distance_from_earth">Distance From Earth (Light Years):</label>
+								<input id="distance_from_earth" name="distance_from_earth" type="text" class="form-control input_planet" required>
   </div>
-								<hr class="separator">
 								<div class="form-group">
-									<select name="type" class="form-control input_planet" id="exampleFormControlSelect1" aria-placeholder="Type" required>
+                                <label for="exampleFormControlSelect1">Type:</label>
+									<select name="type" class="form-control input_planet" id="exampleFormControlSelect1" required>
       <option value="rocky">rocky</option>
       <option value="gas">gas</option>
     </select>
 								</div>
-								<hr class="separator">
 								<div class="form-group">
-									<input name="star_system" type="text" class="form-control input_planet" id="star_system" placeholder="Star System:" required>
+                                <label for="star_system">Star System:</label>
+									<input name="star_system" type="text" class="form-control input_planet" id="star_system" required>
   </div>
-									<hr class="separator">
 									<div class="form-group">
-										<input name="mass" type="text" class="form-control input_planet" id="mass" placeholder="Mass (Earth Mass):" required>
+                                    <label for="mass">Mass (Earth Mass):</label>
+										<input name="mass" type="text" class="form-control input_planet" id="mass" required>
   </div>
-										<hr style="margin-bottom:0" class="separator">
-
 										<button id="add_button" type="submit" class="btn btn-primary buttons">add exoplanet</button>
 				</form>
 			</div>
 		</div>
-		<div id="guide-container" class="col-12 col-lg-6">
+	</div>
+    <div class="row">
+			<div id="notes-message" class="col-12">
+				<div>
+					<p>Please check <a href="#notes">below</a> some quick notes on how to insert an exoplanet.</p>
+				</div>
+			</div>
+		</div>
+</div>
+<hr style="color: blue" class="separator">
+    <div id="notes" class="container guide-container">
+    <div class="row">
+		<div id="guide-column" class="col-12">
 			<div id="guide">
 				<h5>Guide To Insert An Exoplanet</h5>
 				<div class="accordion" id="accordionExample">
@@ -119,6 +130,7 @@
 				</p>
 			</div>
 		</div>
+    
 	</div>
 </div>
 {% endblock %}
