Moved punctuoation outside the anchor tag at 'log in' anchor from the message underneath the form

--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,7 @@
                 {% if login %}
 				<p>Not registered yet? Please <a href="{{ url_for('register') }}">register</a> now.</p>
                 {% else %}
-                <p>If you are already registered, please <a href="{{ url_for('login') }}">login.</a></p>
+                <p>If you are already registered, please <a href="{{ url_for('login') }}">login</a>.</p>
                 {% endif %}
 			</div>
 		</div>
