--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -7,14 +7,6 @@
 			<h1 class="top-titles">add exoplanet</h1>
 		</div>
 	</div>
-	<div class="row main-action">
-		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
-		</div>
-		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
-		</div>
-	</div>
 	<div id="form_row" class="row">
 		<div id="insert_form" class="col-12">
 			<div id="form_container">
@@ -59,42 +51,23 @@
 			</div>
 		</div>
 </div>
-<hr style="color: blue" class="separator">
     <div id="notes" class="container guide-container">
-    <div class="row">
-		<div id="guide-column" class="col-12">
-			<div id="guide">
-				<h5>Guide To Insert An Exoplanet</h5>
-				<div class="accordion" id="accordionExample">
-					<div class="card">
-						<div class="card-header" id="headingOne">
-							<h2 class="mb-0">
-								<button class="guide_text btn btn-link btn-block" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          general
-        </button>
-							</h2>
-						</div>
-						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-							data-parent="#accordionExample">
-							<div class="card-body">
-								Please note that all fields are required. For documentation of exoplanets we suggest
-								wikipedia as a source. However there are plenty of other relevant sources out there for
-								inspiration.
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" id="headingTwo">
-							<h2 class="mb-0">
-								<button id="inserting_the_mass_header" class="guide_text btn btn-link btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          inserting the mass
-        </button>
-							</h2>
-						</div>
-						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-							data-parent="#accordionExample">
-							<div id="inserting_the_mass" class="card-body">
-								The planet's mass must be in relation to that of Earth's and expressed in <a
+    <div id="guide-row" class="row">
+    <div class="col-4">
+    <div class="guide-holders">
+    <h4>General</h4>
+    <hr class="guide-separator">
+    <p>Please note that all fields are required. For documentation of exoplanets we suggest 
+                                <a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank" aria-label="List of exoplanets on Wikipedia">Wikipedia</a> 
+                                as a source. However there are plenty of other relevant sources out there for
+								inspiration.</p>
+    </div>
+    </div>
+    <div class="col-4">
+    <div class="guide-holders">
+    <h4>Inserting The Mass</h4>
+    <hr class="guide-separator">
+    <p>The planet's mass must be in relation to that of Earth's and expressed in <a
 									href="https://en.wikipedia.org/wiki/Earth_mass" target="blank"
 									aria-label="Earth mass as unit of measure">Earth mass (M⊕)</a>. At gas giants, all
 								internet sources
@@ -102,35 +75,18 @@
 									href="https://en.wikipedia.org/wiki/Jupiter_mass" target="blank"
 									aria-label="Jupiter mass as unit of measure">Jupiter mass (Mj)</a>. Please convert
 								into Earth
-								mass before inserting. Jupiter mass is 318 times greater than Earth mass.
+								mass before inserting. Jupiter mass is <span id="jupiter-mass">318</span> times greater than Earth mass.
 								Please see <a href="{{ url_for('mass_photo') }}">here</a> the
-								location for planet's mass when searching on Wikipedia.
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-header" id="headingThree">
-							<h2 class="mb-0">
-								<button class=" guide_text btn btn-link btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          planet's image
-        </button>
-							</h2>
-						</div>
-						<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-							data-parent="#accordionExample">
-							<div class="card-body">
-								Please note that a default image will be added, depending on the type of exoplanet inserted - rocky or gas giant.
-							</div>
-						</div>
-					</div>
-				</div>
-				<p id="wikipedia_link">
-					<a id="exoplanets_anchor" href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="_blank"
-						aria-label="list of explanets from wikipedia">wikipedia.org</a>
-				</p>
-			</div>
-		</div>
-    
-	</div>
+								location for planet's mass when searching on Wikipedia.</p>
+    </div>
+    </div>
+    <div class="col-4">
+    <div class="guide-holders">
+    <h4>Planet's Image</h4>
+    <hr class="guide-separator">
+    <p>Please note that a default image will be added, depending on the type of exoplanet inserted - rocky or gas giant.</p>
+    </div>
+    </div>
+    </div>
 </div>
 {% endblock %}
