Added internal link to form at guide

--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -88,5 +88,10 @@
     </div>
     </div>
     </div>
+    <div class="row">
+    <div class="col-12 d-none d-sm-block">
+    <p id="back-to-form"><a href="#">Back</a></p>
+    </div>
+    </div>
 </div>
 {% endblock %}
