Changed background-color to blue at home to test if it's automatically deploying to heroku

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,7 +196,7 @@ body {
 }
 
 #home {
-    background-image: url(../images/exoplanet_images/space-planets.jpg);
+    background-color: blue;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
