--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,18 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
-	<div id="profile-container" class="row">
-		<div class="col-12">
-			<h3>{{ username }}'s Profile</h3>
+	<div class="row margin">
+		<div id="profile-title" class="col-12">
+			<h1>{{ user }}'s Profile</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div id="user-info" class="col-12">
+			<div>
+				<p>{{ user }}, you currently have {{ users_list }} exoplanets in your list.</p>
+				<p>You have {{ users_rocky }} rocky planets and {{ users_gas_giants }} gas giants.</p>
+				<p>You can add some more from our <a href="{{ url_for('exoplanets_display') }}">main list</a> or add
+					manually your favourite exoplanet discovered up to date.
+			</div>
 		</div>
 	</div>
 </div>
