--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,16 +1,13 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
-	<div class="row margin">
-		<div id="profile-title" class="col-12">
-			<h1>{{ user }}'s Profile</h1>
-		</div>
-	</div>
 	<div class="row">
 		<div id="user-info" class="col-12">
             {% set numberRocky = users_rocky | int %}
             {% set numberGas = users_gas_giants | int %}
              {% set numberList = users_list | int %}
-			<div>
+			<div style="padding-bottom:1rem;" class="info">
+            <h4>{{ user }}'s Profile</h4>
+             <hr class="guide-separator">
 				<p>{{ user }}, you currently have {{ users_list }} {% if numberList == 1 %}
                                                                        exoplanet
                                                                     {% else %}
@@ -32,8 +29,12 @@
 				<p>You can add some more from our <a href="{{ url_for('exoplanets_display') }}">main list</a> or add
 					manually your favourite exoplanet discovered up to date.
 			</div>
+            <div style="margin-top:0; padding-top:0;" id="profile-button">
+            <a
+				href="{{ url_for('favourite_list', username=session['user']) }}"><button class="buttons">favourites</button></a>
+            </div>
 		</div>
 	</div>
-    
+     <a href="{{ url_for('deleteprofile') }}">DELETE</a>
 </div>
 {% endblock %}
