--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -15,8 +15,9 @@
                 $('#icons_container').hide();
             }
             if ($('#registration-message-container').length) {
-                $('.margin').addClass('smaller-margin');
+                $('.margin').addClass('no-margin');
                 $('.register-form').addClass('reduce-margin');
+                $('.user-info').addClass('smaller-margin');
             }
         });
 </script>
