Changed text if list is empty

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -71,7 +71,7 @@
 	<div id="empty_message" class="row">
 		<div class="col-12">
 			<div id="add_favourites_message">
-				<p>this list is currently empty.</p>
+				<p>your list is currently empty.</p>
 			</div>
 		</div>
 	</div>
