--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -4,7 +4,7 @@
 	<div id="your_weight_container" class="row">
 		<div class="col-12">
         <div id="weight_message">
-			<p>On the surface of {{ exoplanet_name }} you weight<br>
+			<p>On the surface of {{ exoplanet_name }} your weight is<br>
              {{ your_weightExoplanet }} kg.</p>
         </div>
 		</div>
@@ -19,7 +19,7 @@
     
     
     <a
-				href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
+				href="{{ url_for('favourite_detailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
     
     </div>
 </div>
