--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,16 +159,12 @@ body {
   font-family: "Abril Fatface", cursive;
 }
 
-#registration-message-container {
-  margin-top: 6rem;
-  text-align: center;
-}
-
 /* flash message starts here */
 
 #registration-message-container {
   margin-top: 5rem;
   padding: 0;
+  text-align: center;
 }
 
 #registration-message-container div {
@@ -260,7 +256,6 @@ body {
 }
 
 /* register.html page starts here */
-
 
 /* exoplanets.html page starts here */
 
@@ -506,61 +501,61 @@ body {
 /* profile.html starts here */
 
 .user-info {
-    margin-top: 19%;
+  margin-top: 19%;
 }
 
 .smaller-margin {
-    margin-top: 10%;
+  margin-top: 10%;
 }
 
 .user-info div {
-    background-color: rgba(112, 16, 3, 0.8);
-    color: #e5e5dc;
-    width: 60%;
-    margin: 0 auto;
-    padding: 2rem 4rem;
-    font-size: 108%;
-    letter-spacing: .1rem;
+  background-color: rgba(112, 16, 3, 0.8);
+  color: #e5e5dc;
+  width: 60%;
+  margin: 0 auto;
+  padding: 2rem 4rem;
+  font-size: 108%;
+  letter-spacing: 0.1rem;
 }
 
 #info {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .user-info div a {
-    color: #e5e5dc;
-    font-weight: 900;
-    text-transform: capitalize;
+  color: #e5e5dc;
+  font-weight: 900;
+  text-transform: capitalize;
 }
 
 .user-info div a:hover {
-    opacity: .6;
+  opacity: 0.6;
 }
 
 #profile-actions {
-    padding-top: 0;
-    margin-top: 0;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 #profile-actions button {
-    width: 30%;
-    height: 2.15rem;
-    letter-spacing: .06rem;
+  width: 30%;
+  height: 2.15rem;
+  letter-spacing: 0.06rem;
 }
 
 #delete-profile {
-    float: right;
-    color: #e5e5dc;
-    text-transform: capitalize;
-    font-style: italic;
-    opacity: .8;
-    padding-top: 1rem;
-    font-size: 80%;
+  float: right;
+  color: #e5e5dc;
+  text-transform: capitalize;
+  font-style: italic;
+  opacity: 0.8;
+  padding-top: 1rem;
+  font-size: 80%;
 }
 
 #delete-profile:hover {
-    text-decoration: none;
-    opacity: .6;
+  text-decoration: none;
+  opacity: 0.6;
 }
 
 /* already_favourite messsage page starts here */
@@ -608,7 +603,7 @@ body {
   font-size: 150%;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
 }
 
 #add_favourites_message p {
@@ -1025,6 +1020,61 @@ select {
     width: 100%;
     font-size: 95%;
   }
+  #registration-message-container div {
+    width: 90%;
+    font-size: 90%;
+    margin-left: 6%;
+  }
+  #login-container {
+    width: 100%;
+  }
+  #register-text {
+    width: 100%;
+  }
+  .user-info {
+      margin-top: 30%;
+  }
+  #info {
+    width: 100%;
+  }
+  #profile-actions  {
+      width: 100%;
+  }
+  #profile-actions button {
+      width: 47%;
+  }
+  .user-info div {
+      font-size: 100%;
+  }
+  #delete-profile {
+      padding-top: .9rem;
+  }
+  #form_container {
+      padding: 2rem 1rem;
+      font-size: 80%;
+  }
+  #notes-message div {
+      margin-top: 0;
+      width: 100%;
+  }
+  #notes {
+      margin-top: 5%;
+  }
+  .input_planet {
+      height: 2rem;
+  }
+  #form_row {
+      margin-top: 1.2rem;
+  }
+  #add_button {
+      height: 3rem;
+  }
+  .guide-holders {
+      padding: 1rem .5rem;
+  }
+  #general-guide {
+      padding-top: 2rem;
+  }
 }
 
 @media (min-width: 577px) and (max-width: 768px) {
@@ -1046,6 +1096,76 @@ select {
   .message {
     width: 100%;
   }
+  #registration-message-container div {
+    width: 90%;
+  }
+  
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .register-form {
+    margin-top: 39%;
+  }
+  #login-container {
+    width: 70%;
+  }
+  .user-info {
+    margin-top: 39%;
+  }
+  #info {
+    width: 80%;
+  }
+  #profile-actions  {
+      width: 80%;
+  }
+  #form_container {
+      padding: 2rem 1rem;
+  }
+  
+   #form_container {
+       width: 90%;
+       margin-top: 5%;
+   }
+   .form-container {
+       margin-top: 15%;
+   }
+   #add_button {
+       width: 100%;
+   }
+   #notes-message div {
+       margin-top: 0;
+       width: 90%;
+   }
+ 
+}
+
+@media (min-width: 1024px) and (max-width: 1199px) {
+    .user-info {
+    margin-top: 39%;
+    font-size: 130%;
+    }
+    #info {
+        width: 80%;
+    }
+    #profile-actions  {
+      width: 80%;
+  }
+  #form_container {
+       width: 90%;
+       margin-top: 5%;
+   }
+   .form-container {
+       margin-top: 15%;
+   }
+   #add_button {
+       width: 100%;
+   }
+   #notes-message div {
+       width: 90%;
+   }
+   .guide-container {
+       min-height: 61vh;
+   }
 }
 
 @media (min-width: 1500px) {
