Added col-12 for phone screens at guide

--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -53,8 +53,8 @@
 </div>
     <div id="notes" class="container guide-container">
     <div id="guide-row" class="row">
-    <div class="col-4">
-    <div class="guide-holders">
+    <div class="col-12 col-md-4">
+    <div id="general-guide" class="guide-holders">
     <h4>General</h4>
     <hr class="guide-separator">
     <p>Please note that all fields are required. For documentation of exoplanets we suggest 
@@ -63,7 +63,7 @@
 								inspiration.</p>
     </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-md-4">
     <div class="guide-holders">
     <h4>Inserting The Mass</h4>
     <hr class="guide-separator">
@@ -80,7 +80,7 @@
 								location for planet's mass when searching on Wikipedia.</p>
     </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-md-4">
     <div class="guide-holders">
     <h4>Planet's Image</h4>
     <hr class="guide-separator">
