--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1099,8 +1099,15 @@ select {
       padding: 0;
   }
   .navbar-nav {
-      background-color: rgba(112, 16, 3, 0.95); 
+      background-color: rgba(112, 16, 3, 0.95);
+      padding: 0 1rem;
   }
+  .navbar-nav li {
+      padding-left: .5rem;
+  }
+  #navbarNav {
+      margin-top: 1rem;
+  }     
 }
 
 @media (min-width: 577px) and (max-width: 768px) {
