--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1099,7 +1099,7 @@ select {
       padding: 0;
   }
   .navbar-nav {
-      background-color: rgba(112, 16, 3, 0.95);
+      background-color: rgb(112, 16, 3);
       padding: 0 1rem;
   }
   .navbar-nav li {
@@ -1107,6 +1107,9 @@ select {
   }
   #navbarNav {
       margin-top: 1rem;
+  }
+  .navbar-toggler {
+      border: 2px solid rgb(112, 16, 3);
   }     
 }
 
