Set margin-top to navbarNav for mobile screens to .8rem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1106,7 +1106,7 @@ select {
       padding-left: .5rem;
   }
   #navbarNav {
-      margin-top: 1rem;
+      margin-top: .8rem;
   }
   .navbar-toggler {
       border: 2px solid rgb(112, 16, 3);
