--- a/templates/wrongData.html
+++ b/templates/wrongData.html
@@ -14,7 +14,7 @@
 	<div class="row">
 		<div id="back_to_form" class="col">
 			<div>
-                <a href="{{ url_for('add_exoplanet') }}"><button class="top_buttons buttons">back</button></a>
+                <a href="{{ url_for('addExoplanet') }}"><button class="top_buttons buttons">back</button></a>
 			</div>
 		</div>
 	</div>
