--- a/templates/calculateWeight.html
+++ b/templates/calculateWeight.html
@@ -8,7 +8,7 @@
 </div>
 	<div class="row">
 		<div class="col-12">
-			<form action="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}" method="POST">
+			<form action="{{ url_for('calculateWeight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}" method="POST">
 				<div class="form-group">
 					<label style="text-transform:capitalize" for="your_weight">please enter your weight in kg</label>
 					<input name="your_weight" type="text" class="form-control" id="your_weight">
