--- a/templates/detailedExoplanet.html
+++ b/templates/detailedExoplanet.html
@@ -29,10 +29,10 @@
 				<hr class="detailed_separator">
 				<div style="padding-bottom:1.5rem">
 					<a style="margin-right:2rem;"
-						href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+						href="{{ url_for('favourites', exoplanet_id=detailed_exoplanet._id)}}"
 						id="margin-left"><button class="buttons detailed-action">add favourites</button></a>
 					<a style="margin-right:2rem;"
-						href="{{ url_for('calculate_weight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
+						href="{{ url_for('calculateWeight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
 						id="margin-left"><button class="buttons detailed-action">calculate weight</button></a>
 				</div>
 			</div>
