--- a/templates/exoplanetWeight.html
+++ b/templates/exoplanetWeight.html
@@ -12,14 +12,14 @@
     <div style="margin-top:5rem" class="row">
     <div id="weight_buttons_container" class="col-12">
     <a
-				href="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
+				href="{{ url_for('calculateWeight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
     
     <a
 				href="{{ url_for('favourite_list') }}"><button class="weight_buttons buttons">favourites</button></a>
     
     
     <a
-				href="{{ url_for('favourite_detailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
+				href="{{ url_for('favouriteDetailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
     
     </div>
 </div>
