--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
 					<a class="nav-link nav_anchors" href="{{ url_for('favourite_list') }}">Favourites List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
+					<a class="nav-link nav_anchors" href="{{ url_for('addExoplanet') }}">Add Exoplanet</a>
 				</li>
 			</ul>
 		</div>
