--- a/static/css/style.css
+++ b/static/css/style.css
@@ -565,8 +565,7 @@ body {
 }
 
 .message {
-  background-color: #7a2048;
-  border: 2.5px solid #408ec6;
+  background-color: rgba(112, 16, 3, 0.8);
   width: 51.5rem;
   height: 5rem;
   color: #e5e5dc;
