Changed url_for to url_for insert_exoplanet at the message at the bottom of the page

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -90,7 +90,7 @@
 			<div id="col_add_exoplanet_message" class="col-12">
 				<div id="add_exoplanet_message">
 					<p>Can't find your favourite exoplanet in the main list? Add any exoplanet to your Favourites List
-						by simply entering its details <a href="{{ url_for('addExoplanet') }}">here</a>.</p>
+						by simply entering its details <a href="{{ url_for('insert_exoplanet') }}">here</a>.</p>
 				</div>
 			</div>
 		</div>
